test/org/midica/testfiles/failing/opt-with-value-else.midica
INCLUDE inc/instruments.midica

VAR $x = 5

( if $x
	0  c  /4
)
( else=
	0  c  /4
)